--- a/ProjectEngslish - Learn/index.html
+++ b/ProjectEngslish - Learn/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,29 @@
     <link rel="stylesheet" href="resources/css/style.css">
     <link rel="stylesheet" href="vendor/css/grid.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+        integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <title>SelfTaught</title>
 </head>
+
 <body>
-    
+    <header>
+        <a href="#"><img class="logo" src="/ProjectEngslish - Learn/resources/img/logo.png" alt="logo"></a>
+        <ul class="linkheader">
+            <li><a href="#">How clients think</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+        <div class="clearfix"></div>
+        <div class="row">
+            <h1 class="heading-main-text">We will study <br>English together.<br>
+                So join with us.
+            </h1>
+            <a href="#">Tell me more</a>
+            <a href="#">Join us</a>
+        </div>
+    </header>
 </body>
+
 </html>
