--- a/ProjectWebbanhang - Thuchanh/index.html
+++ b/ProjectWebbanhang - Thuchanh/index.html
@@ -12,6 +12,21 @@
     <title>Web bán hàng vip pro</title>
 </head>
 <body>
-    <p class="test">Hacker vừa mới đi qua đây nên web nó sập =) </p>
+    <header>
+        <a href="#">
+            <img class="Logo" src="/ProjectWebbanhang - Thuchanh/resources/img/logo1.png" alt="Logo">
+        </a>
+        <ul class="navLinkHeader">
+            <li>About</li>
+            <li>Product</li>
+            <li>Guide</li>
+            <li>Download</li>
+            <li>News</li>
+            <li>Pay</li>
+        </ul>
+        <p>We provide software aimed at serving MMOs. Join us now</p>
+        <a href="#">Download now</a>
+        <a href="#">Learn More</a>
+    </header>
 </body>
 </html>
