Commit ngày 3/3/2022 lần 1

--- a/ProjectWebbanhang - Thuchanh/index.html
+++ b/ProjectWebbanhang - Thuchanh/index.html
@@ -17,16 +17,19 @@
             <img class="Logo" src="/ProjectWebbanhang - Thuchanh/resources/img/logo1.png" alt="Logo">
         </a>
         <ul class="navLinkHeader">
-            <li>About</li>
-            <li>Product</li>
-            <li>Guide</li>
-            <li>Download</li>
-            <li>News</li>
-            <li>Pay</li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Product</a></li>
+            <li><a href="#">Guide</a></li>
+            <li><a href="#">Download</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Pay</a></li>
         </ul>
-        <p>We provide software aimed at serving MMOs. Join us now</p>
-        <a href="#">Download now</a>
-        <a href="#">Learn More</a>
+        <div class="clearfix"></div>
+        <div class="boxheader">
+            <p>We provide software <br> aimed at serving MMOs. <br>Join us now</p>
+            <a href="#">Download now</a>
+            <a href="#">Learn More</a>
+        </div>        
     </header>
 </body>
 </html>
