--- a/ProjectEngslish - Learn/index.html
+++ b/ProjectEngslish - Learn/index.html
@@ -24,11 +24,13 @@
         </ul>
         <div class="clearfix"></div>
         <div class="row">
-            <h1 class="heading-main-text">We will study <br>English together.<br>
-                So join with us.
-            </h1>
-            <a href="#">Tell me more</a>
-            <a href="#">Join us</a>
+            <div class="heading-main-row">
+                <h1 class="heading-main-text">We will study <br>English together.<br>
+                    So join with us.
+                </h1>
+                <a href="#">Tell me more</a>
+                <a href="#">Join us</a>
+            </div>    
         </div>
     </header>
 </body>
