--- a/ProjectEngslish - Learn/index.html
+++ b/ProjectEngslish - Learn/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="resources/css/style.css">
     <link rel="stylesheet" href="vendor/css/grid.css">
+    <link rel="shortcut icon" href="/ProjectEngslish - Learn/resources/img/logo.png">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
         integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
@@ -28,11 +29,46 @@
                 <h1 class="heading-main-text">We will study <br>English together.<br>
                     So join with us.
                 </h1>
-                <a href="#">Tell me more</a>
-                <a href="#">Join us</a>
-            </div>    
+                <a href="#" class="btn">Tell me more</a>
+                <a href="#" class="btn">Join us</a>
+            </div>
         </div>
     </header>
+    <section class="about-section">
+        <div class="row">
+            <h2>About Us</h2>
+            <p class="p-long">
+                We are people that are studying English by ourselves, we believe that you don’t <br> need to pay so much
+                money for being good at English, we’re here to help you
+            </p>
+        </div>
+        <div class="row">
+            <div class="col span-1-of-4">
+                <img src="./resources/img/activities1.jpeg" alt="Activities1">
+                <p class="picture-title">
+                    Team working 
+                </p>
+            </div>
+            <div class="col span-1-of-4">
+                <img src="./resources/img/activities2.jpeg" alt="Activities2">
+                <p class="picture-title">
+                    Funny class
+                </p>
+            </div>
+            <div class="col span-1-of-4">
+                <img src="./resources/img/activities3.jpeg" alt="Activities3">
+                <p class="picture-title">
+                    Be confident 
+                </p>
+            </div>
+            <div class="col span-1-of-4">
+                <img src="./resources/img/activities4.jpeg" alt="Activities4">
+                <p class="picture-title">
+                    All our friends
+                </p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
