--- a/ProjectEngslish - Learn/index.html
+++ b/ProjectEngslish - Learn/index.html
@@ -38,7 +38,7 @@
         <div class="row">
             <h2>About Us</h2>
             <p class="p-long">
-                We are people that are studying English by ourselves, we believe that you don’t <br> need to pay so much
+                We are people that are studying English by ourselves, we believe that you don’t need to pay so much
                 money for being good at English, we’re here to help you
             </p>
         </div>
