--- a/ProjectEngslish - Learn/index.html
+++ b/ProjectEngslish - Learn/index.html
@@ -43,25 +43,25 @@
             </p>
         </div>
         <div class="row">
-            <div class="col span-1-of-4">
+            <div class="col span-1-of-4 about-picture">
                 <img src="./resources/img/activities1.jpeg" alt="Activities1">
                 <p class="picture-title">
                     Team working 
                 </p>
             </div>
-            <div class="col span-1-of-4">
+            <div class="col span-1-of-4 about-picture">
                 <img src="./resources/img/activities2.jpeg" alt="Activities2">
                 <p class="picture-title">
                     Funny class
                 </p>
             </div>
-            <div class="col span-1-of-4">
+            <div class="col span-1-of-4 about-picture">
                 <img src="./resources/img/activities3.jpeg" alt="Activities3">
                 <p class="picture-title">
                     Be confident 
                 </p>
             </div>
-            <div class="col span-1-of-4">
+            <div class="col span-1-of-4 about-picture">
                 <img src="./resources/img/activities4.jpeg" alt="Activities4">
                 <p class="picture-title">
                     All our friends
