--- a/ProjectWebbanhang - Thuchanh/index.html
+++ b/ProjectWebbanhang - Thuchanh/index.html
@@ -27,9 +27,31 @@
         <div class="clearfix"></div>
         <div class="boxheader">
             <p>We provide software <br> aimed at serving MMOs. <br>Join us now</p>
-            <a href="#">Download now</a>
-            <a href="#">Learn More</a>
+            <a href="#" class="link">Download now</a>
+            <a href="#" class="link">Learn More</a>
         </div>        
     </header>
+    <section class="aboutus">
+        <p>About Us</p>
+        <p2>We are pioneers in writing MMO tools. We believe that you don't need to pay a lot of money and still have a good tool. We are here to help you.</p2>
+        <div class="row">
+            <div class="col span-1-of-4 about-picture">
+                <img src="/ProjectWebbanhang - Thuchanh/resources/img/about1.png" alt="NinjaCare">
+                <p>Ninja Care</p>
+            </div>
+            <div class="col span-2-of-4 about-picture">
+                <img src="/ProjectWebbanhang - Thuchanh/resources/img/about2.png" alt="NinjaPhone">
+                <p>Ninja Phone</p>
+            </div>
+            <div class="col span-3-of-4 about-picture">
+                <img src="/ProjectWebbanhang - Thuchanh/resources/img/about3.png" alt="NinjaAutoPost">
+                <p>Ninja Auto Post</p>
+            </div>
+            <div class="col span-4-of-4 about-picture">
+                <img src="/ProjectWebbanhang - Thuchanh/resources/img/about4.png" alt="NinjaSystemV4">
+                <p>Ninja System V4</p>
+            </div>
+        </div>       
+    </section>
 </body>
 </html>
