--- a/ProjectEngslish - Learn/index.html
+++ b/ProjectEngslish - Learn/index.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="vendor/css/grid.css">
     <link rel="shortcut icon" href="/ProjectEngslish - Learn/resources/img/logo.png">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-        integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/3bffaa7e94.js" crossorigin="anonymous"></script>
     <title>SelfTaught</title>
 </head>
 
@@ -46,7 +45,7 @@
             <div class="col span-1-of-4 about-picture">
                 <img src="./resources/img/activities1.jpeg" alt="Activities1">
                 <p class="picture-title">
-                    Team working 
+                    Team working
                 </p>
             </div>
             <div class="col span-1-of-4 about-picture">
@@ -58,7 +57,7 @@
             <div class="col span-1-of-4 about-picture">
                 <img src="./resources/img/activities3.jpeg" alt="Activities3">
                 <p class="picture-title">
-                    Be confident 
+                    Be confident
                 </p>
             </div>
             <div class="col span-1-of-4 about-picture">
@@ -69,5 +68,44 @@
             </div>
         </div>
     </section>
+    <section class="products-section">
+        <h2>Product</h2>
+        <div class="row">
+            <div class="col span-1-of-3">
+                <div class="product-box">
+                    <h3>Pronunciation class</h3>
+                    <p>19$ <span>/ month</span> </p>
+                    <ul>
+                        <li><i class="fa-solid fa-check small-icon"></i>Native voices</li>
+                        <li><i class="fa-solid fa-check small-icon"></i>Master IPA</li>
+                    </ul>
+                    <a href="#" class="btn">JOIN US</a>
+                </div>
+            </div>
+            <div class="col span-1-of-3">
+                <div class="product-box">
+                    <h3>Speaking class</h3>
+                    <p>25$ <span>/ month</span> </p>
+                    <ul>
+                        <li><i class="fa-solid fa-check small-icon"></i>Native speaking</li>
+                        <li><i class="fa-solid fa-check small-icon"></i>Speaking naturally</li>
+                    </ul>
+                    <a href="#" class="btn">JOIN US</a>
+                </div>                
+            </div>
+            <div class="col span-1-of-3">
+                <div class="product-box">
+                    <h3>Listening class</h3>
+                    <p>25$ <span>/ month</span> </p>
+                    <ul>
+                        <li><i class="fa-solid fa-check small-icon"></i>Native speech</li>
+                        <li><i class="fa-solid fa-check small-icon"></i>Hearing English clearly</li>
+                    </ul>
+                    <a href="#" class="btn">JOIN US</a>
+                </div>               
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
