Commit ngày 26/3/2022 lần 2

--- a/ProjectWebbanhang - Thuchanh/index.html
+++ b/ProjectWebbanhang - Thuchanh/index.html
@@ -33,25 +33,25 @@
     </header>
     <section class="aboutus">
         <div class="row">
-            <p class="aboutus-header">About Us</p>
+            <p class="header-section">About Us</p>
             <p class="p-long">We are pioneers in writing MMO tools. We believe that you don't <br>need to pay a lot of money and still have a good tool. We are here to help you.</p>
         </div>       
         <div class="row">
             <div class="col span-1-of-4 about-picture">
                 <img src="/ProjectWebbanhang - Thuchanh/resources/img/about1.png" alt="NinjaCare">
-                <p>Ninja Care</p>
+                <p class="about-us-picture-title align-1">Ninja Care</p>
             </div>
             <div class="col span-1-of-4 about-picture">
                 <img src="/ProjectWebbanhang - Thuchanh/resources/img/about2.png" alt="NinjaPhone">
-                <p>Ninja Phone</p>
+                <p class="about-us-picture-title align-2">Ninja Phone</p>
             </div>
             <div class="col span-1-of-4 about-picture">
                 <img src="/ProjectWebbanhang - Thuchanh/resources/img/about3.png" alt="NinjaAutoPost">
-                <p>Ninja Auto Post</p>
+                <p class="about-us-picture-title align-3">Ninja Auto Post</p>
             </div>
             <div class="col span-1-of-4 about-picture">
                 <img src="/ProjectWebbanhang - Thuchanh/resources/img/about4.png" alt="NinjaSystemV4">
-                <p>Ninja System V4</p>
+                <p class="about-us-picture-title align-4">Ninja System V4</p>
             </div>
         </div>       
     </section>
