--- a/ProjectWebbanhang - Thuchanh/index.html
+++ b/ProjectWebbanhang - Thuchanh/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="resources/css/style.css">
     <link rel="stylesheet" href="vendor/css/grid.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/3bffaa7e94.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
     <title>Web bán hàng vip pro</title>
@@ -54,6 +55,18 @@
                 <p class="about-us-picture-title align-4">Ninja System V4</p>
             </div>
         </div>       
+    </section>
+    <section class="products-section">
+        <p class="header-section">Product</p>
+        <div class="col span-1-of-4">
+            <h3>Ninja System</h3>
+            <p>131$<span>/ year</span></p>
+            <ul>
+                <li><i class="fa-solid fa-circle-check"></i></li>
+            </ul>
+            <a href="#" class="link">SELECT</a>            
+        </div>
+        
     </section>
 </body>
 </html>
