Commit ngày 26/3/2022 lần 4

--- a/ProjectWebbanhang - Thuchanh/index.html
+++ b/ProjectWebbanhang - Thuchanh/index.html
@@ -57,15 +57,50 @@
         </div>       
     </section>
     <section class="products-section">
-        <p class="header-section">Product</p>
-        <div class="col span-1-of-4">
-            <h3>Ninja System</h3>
-            <p>131$<span>/ year</span></p>
-            <ul>
-                <li><i class="fa-solid fa-circle-check"></i></li>
-            </ul>
-            <a href="#" class="link">SELECT</a>            
+        <div class="row">
+            <p class="header-section">Product</p>
         </div>
+        <div class="row">
+            <div class="col span-1-of-4 product-box">
+                <h3>Ninja System</h3>
+                <p>131$<span>/ year</span></p>
+                <ul>
+                    <li><i class="fa-solid fa-check small-icon"></i>Raise facebook nick</li>
+                    <li><i class="fa-solid fa-check small-icon"></i>Use emulator</li>
+                    <li><i class="fa-solid fa-check small-icon"></i>Manage bulk accounts</li>  
+                </ul>
+                <a href="#" class="link">SELECT</a>            
+            </div>
+            <div class="col span-1-of-4 product-box">
+                <h3>Ninja Stream</h3>
+                <p>87$<span>/ year</span></p>
+                <ul>
+                    <li><i class="fa-solid fa-check small-icon"></i>Livestream video playback</li>
+                    <li><i class="fa-solid fa-check small-icon"></i>Increase live streaming eyes</li>
+                    <li><i class="fa-solid fa-check small-icon"></i>Use request</li>  
+                </ul>
+                <a href="#" class="link">SELECT</a>            
+            </div>
+            <div class="col span-1-of-4 product-box">
+                <h3>Ninja Add Friend</h3>
+                <p>65$<span>/ year</span></p>
+                <ul>
+                    <li><i class="fa-solid fa-check small-icon"></i>Make friends and agree to be friends Facebook</li>
+                    <li><i class="fa-solid fa-check small-icon"></i>Make friends by suggestion</li>
+                </ul>
+                <a href="#" class="link">SELECT</a>            
+            </div>
+            <div class="col span-1-of-4 product-box">
+                <h3>Ninja Phone</h3>
+                <p>131$<span>/ year</span></p>
+                <ul>
+                    <li><i class="fa-solid fa-check small-icon"></i>No need to install</li>
+                    <li><i class="fa-solid fa-check small-icon"></i>Web browser control</li>
+                    <li><i class="fa-solid fa-check small-icon"></i>Use a real phone</li>  
+                </ul>
+                <a href="#" class="link">SELECT</a>            
+            </div>
+        </div>      
         
     </section>
 </body>
