--- a/ProjectWebbanhang - Thuchanh/index.html
+++ b/ProjectWebbanhang - Thuchanh/index.html
@@ -85,8 +85,9 @@
                 <h3>Ninja Add Friend</h3>
                 <p>65$<span>/ year</span></p>
                 <ul>
-                    <li><i class="fa-solid fa-check small-icon"></i>Make friends and agree to be friends Facebook</li>
+                    <li><i class="fa-solid fa-check small-icon"></i>Agree friends Facebook</li>
                     <li><i class="fa-solid fa-check small-icon"></i>Make friends by suggestion</li>
+                    <li><i class="fa-solid fa-check small-icon"></i>Degree friends Facebook</li>
                 </ul>
                 <a href="#" class="link">SELECT</a>            
             </div>
