--- a/ProjectEngslish - Learn/index.html
+++ b/ProjectEngslish - Learn/index.html
@@ -106,6 +106,61 @@
             </div>
         </div>
     </section>
+    <section class="testimonials-section">
+        <h2>Testimonials</h2>
+        <div class="row">
+            <div class="col span-1-of-3">
+                <blockquote> <!--Trích dẫn câu nói của 1 ai đó -->
+                    The course is very helpful, I can speak English fluently and I think The SF English became my second family, I love everyone very much. Thank you 
+                    <cite> <!-- Người nào nói ra câu ấy -->
+                        <img src="/ProjectEngslish - Learn/resources/img/person5.jpeg" alt=""> Nguyen Chem Gio
+                    </cite>
+                </blockquote>
+            </div>
+            <div class="col span-1-of-3">
+                <blockquote> 
+                    I believe that who came to This English centre would love this place as I did, when the course finished, I feel sad because studying in that place I always felt funny 
+                    <cite> 
+                        <img src="/ProjectEngslish - Learn/resources/img/person2.jpeg" alt=""> Tran Vo Van
+                    </cite>
+                </blockquote>
+            </div>
+            <div class="col span-1-of-3">
+                <blockquote> 
+                    Trust me, you can master English just by joining this class, I did, so I believe that you can too. Hope that one day, you can come and join in this class
+                    <cite> 
+                        <img src="/ProjectEngslish - Learn/resources/img/person4.jpeg" alt=""> Le Du Do
+                    </cite>
+                </blockquote>
+            </div>
+        </div>    
+        <div class="row">
+            <div class="col span-1-of-3">
+                <blockquote> 
+                    I want to thank to SF English, they changed my life forever, I can’t believe that I can speak fluently English, Thank you again
+                    <cite> 
+                        <img src="/ProjectEngslish - Learn/resources/img/person1.jpeg" alt=""> Vu Thi Tang Boc
+                    </cite>
+                </blockquote>
+            </div>
+            <div class="col span-1-of-3">
+                <blockquote> 
+                    All the members of this centre are my friends, I feel like I come home when going to this place for studying English, you will feel like me if you join in
+                    <cite> 
+                        <img src="/ProjectEngslish - Learn/resources/img/person3.jpeg" alt=""> Le Thi That Long
+                    </cite>
+                </blockquote>
+            </div>
+            <div class="col span-1-of-3">
+                <blockquote> 
+                    Let’s start learning English easily by joining to SF English, you can see many friends there, see some incredible teachers, and met my lover there 
+                    <cite> 
+                        <img src="/ProjectEngslish - Learn/resources/img/person6.jpg" alt=""> Nguyen So Huong
+                    </cite>
+                </blockquote>
+            </div>
+        </div>            
+    </section>
 </body>
 
 </html>
