Commit ngày 31/3/2022 lần 1

--- a/ProjectEngslish - Learn/index.html
+++ b/ProjectEngslish - Learn/index.html
@@ -161,7 +161,116 @@
             </div>
         </div>            
     </section>
-    <section></section>
+    <section class="sponsors-section">
+        <h2>Sponsors</h2>
+         <div class="row"> <!--Không sử dụng grid-system -->
+            <ul class="sponsors-showcase"> 
+                <li>
+                    <figure> <!--Sử dụng nhóm figure để chứa hình-->
+                        <img class="logo-sponsor" src="resources/img/barcelona_logo.png" alt="barcelona_logo"> 
+                        <figcaption> <!--Chú thích cho bức hình-->
+                            Barcelona
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img class="logo-sponsor" src="resources/img/mctcity_logo.png" alt="mctcity_logo">
+                        <figcaption>
+                            Manchester City
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img class="logo-sponsor" src="resources/img/tottenham_logo.png" alt="tottenham_logo">
+                        <figcaption>
+                            Tottenham Hotspur
+                        </figcaption>
+                    </figure>
+                </li>
+            </ul>
+            <ul class="sponsors-showcase">
+                <li>
+                    <figure>
+                        <img class="logo-sponsor" src="resources/img/real_logo.png" alt="real_logo">
+                        <figcaption>
+                            Real Marid
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img class="logo-sponsor" src="resources/img/juventus_logo.png" alt="juventus_logo">
+                        <figcaption>
+                            Juventus
+                        </figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img class="logo-sponsor" src="resources/img/mctunited_logo.png" alt="mctunited_logo">
+                        <figcaption>
+                            Manchester United
+                        </figcaption>
+                    </figure>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <section class="contact-section">
+        <div class="row">
+            <div class="col span-1-of-3">
+                <ul class="information">
+                    <li><i class="fas fa-map-marker-alt"></i>Address: 21A, SelfTaught street, Ha Noi</li>
+                    <li><i class="fas fa-envelope"></i>Email: selftaughtteam@edu.com</li>
+                    <li><i class="fas fa-phone"></i>SĐT: (+084)099-923-232-320</li>
+                </ul> 
+                <ul class="social-icon">
+                    <li><i class="fab fa-twitter-square"></i></li>
+                    <li><i class="fab fa-facebook-square"></i></li>
+                    <li><i class="fab fa-instagram"></i></li>
+                    <li><i class="fab fa-google-plus-square"></i></li>
+                </ul>
+            </div>
+            <div class="col span-2-of-3">
+                <form action="POST">
+                    <div class="row">
+                        <div class="col span-1-of-3">
+                            <label>Name</label>                            
+                        </div>
+                        <div class="col span-2-of-3">
+                            <input type="text" placeholder="Your Name">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col span-1-of-3">
+                            <label>Email</label>                            
+                        </div>
+                        <div class="col span-2-of-3">
+                            <input type="text" placeholder="Your Email">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col span-1-of-3">
+                            <label>Message</label>                            
+                        </div>
+                        <div class="col span-2-of-3">
+                            <textarea placeholder="Your Message">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <input type="submit" class="btn" value="Send It">
+                    </div>
+                </form>
+            </div>
+        </div>       
+    </section>
+    <footer>
+        <p>
+            Copyright &copy; by SELFTAUGHT TEAM
+        </p>
+    </footer>
 </body>
 
 </html>
