Commit ngày 1/4/2022 lần 1

--- a/ProjectWebbanhang - Thuchanh/index.html
+++ b/ProjectWebbanhang - Thuchanh/index.html
@@ -102,7 +102,12 @@
                 <a href="#" class="link">SELECT</a>            
             </div>
         </div>      
-        
+        <section class="features-section">
+            <h2 class="header-section">Features</h2>
+            <div class="row">
+                
+            </div>
+        </section>
     </section>
 </body>
 </html>
