Commit ngày 3/4/2022 lần 1

--- a/ProjectWebbanhang - Thuchanh/index.html
+++ b/ProjectWebbanhang - Thuchanh/index.html
@@ -105,7 +105,36 @@
         <section class="features-section">
             <h2 class="header-section">Features</h2>
             <div class="row">
-                
+                <div class="col span-1-of-2">
+                    <ul>
+                        <li><object data="./resources/svg/rectangle-vertical-history.svg" type=""></object></i></li>
+                        <li><span>Unlimited use of devices</span><br>
+                            What is the device limitation of other software? 10 devices? 20 devices? 100 devices? For us, there are no limits.</li>
+                    </ul>
+                </div>
+                <div class="col span-1-of-2">
+                    <ul>
+                        <li><object data="./resources/svg/bars-sort.svg" type=""></object></i></li>
+                        <li><span>Various features</span><br>
+                            From automating boring facebook actions, texting buffs, etc.</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col span-1-of-2">
+                    <ul>
+                        <li><object data="./resources/svg/user-headset.svg" type=""></object></i></li>
+                        <li><span>24/7 support</span><br>
+                            Always support for features, support for bugs and fix bugs right away.</li>
+                    </ul>
+                </div>
+                <div class="col span-1-of-2">
+                    <ul>
+                        <li><object data="./resources/svg/file-contract.svg" type=""></object></i></li>
+                        <li><span>Have a contract</span><br>
+                            Make sure you're not just buying the software, you're buying peace of mind.</li>
+                    </ul>
+                </div>
             </div>
         </section>
     </section>
