Commit ngày 22/4/2022 lần 1

--- a/ProjectWebbanhang - Thuchanh/index.html
+++ b/ProjectWebbanhang - Thuchanh/index.html
@@ -151,6 +151,39 @@
                 </div>
             </div>
         </section>
+        <section class="sponsor-section">
+            <div class="row">
+                <p class="header-section">Sponsor</p>
+            </div>
+            <div class="row">
+                <ul class="sponsors-showcase"> 
+                    <li>
+                        <figure> <!--Sử dụng nhóm figure để chứa hình-->
+                            <img class="logo-sponsor" src="resources/img/cck.jpg" alt="cck_logo"> 
+                            <figcaption> <!--Chú thích cho bức hình-->
+                                CCK
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure> <!--Sử dụng nhóm figure để chứa hình-->
+                            <img class="logo-sponsor" src="resources/img/iclick.png" alt="iclick_logo"> 
+                            <figcaption> <!--Chú thích cho bức hình-->
+                                IClick
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure> <!--Sử dụng nhóm figure để chứa hình-->
+                            <img class="logo-sponsor" src="resources/img/phonefarm.jpg" alt="phonefarm_logo"> 
+                            <figcaption> <!--Chú thích cho bức hình-->
+                                IClick
+                            </figcaption>
+                        </figure>
+                    </li>
+                <ul>
+            </div>
+        </section>
     </section>
 </body>
 </html>
