Commit ngày 29/4/2022 lần 1

--- a/ProjectWebbanhang - Thuchanh/index.html
+++ b/ProjectWebbanhang - Thuchanh/index.html
@@ -159,7 +159,7 @@
                 <ul class="sponsors-showcase"> 
                     <li>
                         <figure> <!--Sử dụng nhóm figure để chứa hình-->
-                            <img class="logo-sponsor" src="resources/img/cck.jpg" alt="cck_logo"> 
+                            <img class="logo-sponsor" src="resources/img/cck.png" alt="cck_logo"> 
                             <figcaption> <!--Chú thích cho bức hình-->
                                 CCK
                             </figcaption>
@@ -175,9 +175,9 @@
                     </li>
                     <li>
                         <figure> <!--Sử dụng nhóm figure để chứa hình-->
-                            <img class="logo-sponsor" src="resources/img/phonefarm.jpg" alt="phonefarm_logo"> 
+                            <img class="logo-sponsor" src="resources/img/phonefarm.png" alt="phonefarm_logo"> 
                             <figcaption> <!--Chú thích cho bức hình-->
-                                IClick
+                                Phonefarm
                             </figcaption>
                         </figure>
                     </li>
