Commit ngày 5/4/2021 lần 1

--- a/ProjectEngslish - Learn/index.html
+++ b/ProjectEngslish - Learn/index.html
@@ -222,9 +222,9 @@
         <div class="row">
             <div class="col span-1-of-3">
                 <ul class="information">
-                    <li><i class="fas fa-map-marker-alt"></i>Address: 21A, SelfTaught street, Ha Noi</li>
-                    <li><i class="fas fa-envelope"></i>Email: selftaughtteam@edu.com</li>
-                    <li><i class="fas fa-phone"></i>SĐT: (+084)099-923-232-320</li>
+                    <li><i class="fas fa-map-marker-alt small-icon"></i>Address: 21A, SelfTaught street, Ha Noi</li>
+                    <li><i class="fas fa-envelope small-icon"></i>Email: selftaughtteam@edu.com</li>
+                    <li><i class="fas fa-phone small-icon"></i>SĐT: (+084)099-923-232-320</li>
                 </ul> 
                 <ul class="social-icon">
                     <li><i class="fab fa-twitter-square"></i></li>
@@ -255,13 +255,11 @@
                         <div class="col span-1-of-3">
                             <label>Message</label>                            
                         </div>
-                        <div class="col span-2-of-3">
-                            <textarea placeholder="Your Message">
-                        </div>
+                        <textarea class="col span-2-of-3">Your Message</textarea> 
                     </div>
                     <div class="row">
                         <input type="submit" class="btn" value="Send It">
-                    </div>
+                    </div> 
                 </form>
             </div>
         </div>       
