--- a/ProjectWebbanhang - Thuchanh/index.html
+++ b/ProjectWebbanhang - Thuchanh/index.html
@@ -184,6 +184,57 @@
                 <ul>
             </div>
         </section>
+        <section class="contact-section">
+            <div class="row">
+                <div class="col span-2-of-5">
+                    <ul class="information">
+                        <li><i class="fas fa-map-marker-alt"></i>Address: Ke may</li><br>
+                        <li><i class="fas fa-envelope"></i>Email: ditmethangmagameing@tochucdit.com</li><br>
+                        <li><i class="fas fa-phone"></i>SĐT: (+084)1/2-382-3/4-272</li><br>
+                    </ul> 
+                    <ul class="social-icon">
+                        <li><i class="fab fa-twitter-square"></i></li>
+                        <li><i class="fab fa-facebook-square"></i></li>
+                        <li><i class="fab fa-instagram"></i></li>
+                        <li><i class="fab fa-google-plus-square"></i></li>
+                    </ul>
+                </div>
+                <div class="col span-3-of-5">
+                    <form action="POST">
+                        <div class="row">
+                            <div class="col span-1-of-3">
+                                <label>Name</label>                            
+                            </div>
+                            <div class="col span-2-of-3">
+                                <input type="text" placeholder="Your Name">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col span-1-of-3">
+                                <label>Email</label>                            
+                            </div>
+                            <div class="col span-2-of-3">
+                                <input type="text" placeholder="Your Email">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col span-1-of-3">
+                                <label>Message</label>                            
+                            </div>
+                            <textarea class="col span-2-of-3">Your Message</textarea> 
+                        </div>
+                        <div class="row">
+                            <input type="submit" class="btn" value="Send It">
+                        </div> -->
+                    </form>
+                </div>
+            </div>        
+        </section>
     </section>
+    <footer class="footer-section">
+        <p>
+            Copyright &copy; by TRANTHANHBINH
+        </p>
+    </footer>
 </body>
 </html>
