Commit ngày 4/5/2022 lần 1

--- a/ProjectEngslish - Learn/index.html
+++ b/ProjectEngslish - Learn/index.html
@@ -255,7 +255,7 @@
                         <div class="col span-1-of-3">
                             <label>Message</label>                            
                         </div>
-                        <textarea class="col span-2-of-3">Your Message</textarea> 
+                        <textarea placeholder="Your Message" class="col span-2-of-3"></textarea> 
                     </div>
                     <div class="row">
                         <input type="submit" class="btn" value="Send It">
