--- a/ProjectWebbanhang - Thuchanh/index.html
+++ b/ProjectWebbanhang - Thuchanh/index.html
@@ -188,9 +188,9 @@
             <div class="row">
                 <div class="col span-2-of-5">
                     <ul class="information">
-                        <li><i class="fas fa-map-marker-alt"></i>Address: Ke may</li><br>
-                        <li><i class="fas fa-envelope"></i>Email: ditmethangmagameing@tochucdit.com</li><br>
-                        <li><i class="fas fa-phone"></i>SĐT: (+084)1/2-382-3/4-272</li><br>
+                        <li><i class="fas fa-map-marker-alt small-icon"></i>Address: Ke may</li><br>
+                        <li><i class="fas fa-envelope small-icon"></i>Email: ditmethangmagameing@tochucdit.com</li><br>
+                        <li><i class="fas fa-phone small-icon"></i>SĐT: (+084)1/2-382-3/4-272</li><br>
                     </ul> 
                     <ul class="social-icon">
                         <li><i class="fab fa-twitter-square"></i></li>
@@ -224,8 +224,8 @@
                             <textarea class="col span-2-of-3">Your Message</textarea> 
                         </div>
                         <div class="row">
-                            <input type="submit" class="btn" value="Send It">
-                        </div> -->
+                            <input type="submit" class="link" value="Send It">
+                        </div>
                     </form>
                 </div>
             </div>        
