--- a/ProjectEngslish - Learn/index.html
+++ b/ProjectEngslish - Learn/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="resources/css/style.css">
     <link rel="stylesheet" href="vendor/css/grid.css">
+    <link rel="stylesheet" href="resources/css/query.css"> <!--Thêm file query ngay sau style-->
     <link rel="shortcut icon" href="/ProjectEngslish - Learn/resources/img/logo.png">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3bffaa7e94.js" crossorigin="anonymous"></script>
