Commit ngày 13/6/2022 lần 2

--- a/ProjectEngslish - Learn/index.html
+++ b/ProjectEngslish - Learn/index.html
@@ -11,11 +11,12 @@
     <link rel="shortcut icon" href="/ProjectEngslish - Learn/resources/img/logo.png">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3bffaa7e94.js" crossorigin="anonymous"></script>
+    
     <title>SelfTaught</title>
 </head>
 
 <body>
-    <header>
+    <nav class="sticky">
         <a href="#"><img class="logo" src="/ProjectEngslish - Learn/resources/img/logo.png" alt="logo"></a>
         <ul class="linkheader">
             <li><a href="#">How clients think</a></li>
@@ -23,6 +24,9 @@
             <li><a href="#">Products</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
+    </nav>
+    <header>
+        
         <div class="clearfix"></div>
         <div class="row">
             <div class="heading-main-row">
@@ -270,6 +274,10 @@
             Copyright &copy; by SELFTAUGHT TEAM
         </p>
     </footer>
+    <!--Luôn để jquery cuối cùng-->
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="/ProjectEngslish - Learn/resources/js/scripts.js"></script>
+    <script src="/ProjectEngslish - Learn/vendor/js/jquery.waypoints.min.js"></script>
 </body>
 
 </html>
